--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Documents\\Treehouse\\vEnvironments\\schafer_blog\\Scripts\\python.exe"
+    "python.pythonPath": "D:\\Documents\\python_projects\\vEnvs\\lightning_flask\\Scripts\\python.exe"
 }
