added reading list and edit about me

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 
 *.pyc
+lightning_flask/posts/__pycache__/routes.cpython-37.pyc
+lightning_flask/errors/__pycache__/__init__.cpython-37.pyc
+lightning_flask/__pycache__/__init__.cpython-37.pyc
+lightning_flask/contact/__pycache__/__init__.cpython-37.pyc
+lightning_flask/contact/__pycache__/routes.cpython-37.pyc
+lightning_flask/__pycache__/__init__.cpython-37.pyc
+lightning_flask/__pycache__/config.cpython-37.pyc
+lightning_flask/__pycache__/models.cpython-37.pyc
+lightning_flask/contact/__pycache__/__init__.cpython-37.pyc
+lightning_flask/errors/__pycache__/handlers.cpython-37.pyc
+lightning_flask/contact/__pycache__/forms.cpython-37.pyc
+lightning_flask/contact/__pycache__/routes.cpython-37.pyc
+lightning_flask/contact/__pycache__/utils.cpython-37.pyc
+lightning_flask/errors/__pycache__/__init__.cpython-37.pyc
+lightning_flask/posts/__pycache__/__init__.cpython-37.pyc
+lightning_flask/main/__pycache__/__init__.cpython-37.pyc
+lightning_flask/main/__pycache__/routes.cpython-37.pyc
+lightning_flask/posts/__pycache__/forms.cpython-37.pyc
+lightning_flask/posts/__pycache__/routes.cpython-37.pyc
+lightning_flask/users/__pycache__/routes.cpython-37.pyc
+lightning_flask/users/__pycache__/__init__.cpython-37.pyc
+lightning_flask/users/__pycache__/forms.cpython-37.pyc
+lightning_flask/users/__pycache__/utils.cpython-37.pyc
